tests/compile_fail/slice_multiple_rest.stderr
error: `..` can only be used once per slice pattern
  --> tests/compile_fail/slice_multiple_rest.rs:14:5
   |
14 | /     assert_struct!(container, Container {
15 | |         items: [1, .., 3, .., 5],
16 | |     });
   | |      ^
   | |      |
   | |______can only be used once per slice pattern
   |        previously used here
   |
   = note: this error originates in the macro `assert_struct` (in Nightly builds, run with -Z macro-backtrace for more info)
